--- a/index.html
+++ b/index.html
@@ -1,22 +1,106 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!--声明XHTML1.0过渡类型,注释不要放在开头，否则会有问题-->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-CN">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <!--兼容IE9，IE9使用IE7进行渲染-->
-    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7"/>
     <meta http-equiv="Content-Language" content="zh-CN"/>
     <meta content="all" name="robots"/>
     <meta name="author" content="178518(at)gmail.com,赵云"/>
     <meta name="copyright" content="www.wisedu.com"/>
-    <meta content="金智教育,江苏金智教育信息技术有限公司,教育信息化,校园信息化,数字化校园,应用集成,eai,数据中心,数据集成,信息门户,身份认证,管理信息系统,mis,ces,w5,erp,校园erp,校园网,数据中心,idc,校园支付,校园协同,ccs,移动校园,校园一卡通,校园地理信息服务,节能监管"
-          name="keywords">
-    <meta content="金智教育·金智·金智科技·数字化校园·数字校园·教育信息化服务提供商，业务覆盖应用集成、mis系统、校园erp、校园支付、移动校园、校园网、数据中心等解决方案，并提供咨询规划、软件开发、工程实施、运维保障等服务能力。"
-          name="description"/>
-
-    <title>lovey</title>
-
+    <meta content="easyloader" name="keywords">
+    <meta content="easyloader" name="description"/>
+    <title>easyloader</title>
 </head>
 <body>
+<form action="http://estore.wiscom.com.cn/baseSelect/jsonp.do" method="post">
+    <br>
+
+    <input type="text" id="autocomp"/>
+
+    <br>
+    <br>
+    <input type="text" id="local2"/>
+
+    <br>
+    <br>
+    <input type="text" id="local3" class="auto" name="local3"/>
+
+    <input type="submit" value="提交"/>
+</form>
+
+<!--jquery核心文件-->
+<script src="lovey/js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+<!--外部插件-->
+<script src="lovey/js/extplugins.js" type="text/javascript"></script>
+<script type="text/javascript">
+    //定制化插件的加载声明
+    pluginloader.defPlugins = "a";
+</script>
+<!--懒加载核心js文件-->
+<script src="lovey/js/easyloader.js" type="text/javascript"></script>
+<script type="text/javascript">
+    easyloader.extPluginsFolder = "extplugins";
+    easyloader.extPluginsName = "a";
+
+    $(document).ready(function () {
+        using(["autocomplete","aautocomplete"], function () {
+
+            // 本地字符串数组
+            var availableTags = [
+                "C#",
+                "C++",
+                "Java",
+                "JavaScript",
+                "ASP",
+                "ASP.NET",
+                "JSP",
+                "PHP",
+                "Python",
+                "Ruby"
+            ];
+            $("#autocomp").autocomplete({
+                source: availableTags
+            });
+
+            // 本地json数组
+            var availableTagsJSON = [
+                { label: "C# Language", value: "C#" },
+                { label: "C++ Language", value: "C++" },
+                { label: "Java Language", value: "Java" },
+                { label: "JavaScript Language", value: "JavaScript" },
+                { label: "ASP.NET", value: "ASP.NET" },
+                { label: "JSP", value: "JSP" },
+                { label: "PHP", value: "PHP" },
+                { label: "Python", value: "Python" },
+                { label: "Ruby", value: "Ruby" }
+            ];
+
+            $("#local2").autocomplete({
+                source: availableTagsJSON
+            });
+
+            $(".auto").autocomplete({
+                source: function (request, response) {
+                    $.ajax({
+                        url: "test.json",
+                        dataType: "json",
+                        data: {
+                            pagesize: 5,
+                            keyword: request.term
+                        },
+                        success: function (data) {
+                            response($.map(data.Rows, function (item) {
+                                return {
+                                    label: item.loginName + (item.firstName ? ", " + item.firstName : ""),
+                                    value: item.loginName
+                                }
+                            }));
+                        }
+                    });
+                }
+            });
+        });
+    });
+</script>
 </body>
 </html>
